temp/unpackaged/objects/BookPenalty__c.object
<CustomObject>
    <fields>
        <fullName>Customer_media_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer media name</label>
        <referenceTo>CutomerMedia__c</referenceTo>
        <relationshipLabel>BookPenalties</relationshipLabel>
        <relationshipName>BookPenalties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <label>Media Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>BookPenalty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>BookPenalty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BookPenalties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>